--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         
     </div>
     <div class="portfolio2_img">
-        <img src="Portfolio_Screenshots2.jpg" alt="Portfolio_Screenshots2_Image_Description">
+        <img src="Portfolio_Screenshots2.JPG" alt="Portfolio_Screenshots2_Image_Description">
     </div>
    
 </div>
@@ -153,7 +153,7 @@
 
 <div class="portfolio1">
     <div class="portfolio_img">
-        <img src="Portfolio_Screenshots3.jpg	" alt="Portfolio_Screenshots3_Image_Description">
+        <img src="Portfolio_Screenshots3.JPG" alt="Portfolio_Screenshots3_Image_Description">
     </div>
     <div class="portfolio_text">
         <h2>To Do List</h2>
@@ -176,7 +176,7 @@
        
     </div>
     <div class="portfolio2_img">
-        <img src="Portfolio_Screenshots4.jpg	" alt="Portfolio_Screenshots4_Image_Description">
+        <img src="Portfolio_Screenshots4.JPG" alt="Portfolio_Screenshots4_Image_Description">
     </div>
  
 </div>
