--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         
     </div>
     <div class="portfolio2_img">
-        <img src="Portfolio_Screenshots2.jpg" alt="Portfolio_Screenshots2_Image_Description">
+        <img src="Portfolio_Screenshots2.JPG" alt="Portfolio_Screenshots2_Image_Description">
     </div>
    
 </div>
@@ -163,7 +163,7 @@
 
 <div class="portfolio1">
     <div class="portfolio_img">
-        <img src="Portfolio_Screenshots3.jpg	" alt="Portfolio_Screenshots3_Image_Description">
+        <img src="Portfolio_Screenshots3.JPG" alt="Portfolio_Screenshots3_Image_Description">
     </div>
     <div class="portfolio_text">
         <h2>To Do List</h2>
@@ -186,7 +186,7 @@
        
     </div>
     <div class="portfolio2_img">
-        <img src="Portfolio_Screenshots4.jpg	" alt="Portfolio_Screenshots4_Image_Description">
+        <img src="Portfolio_Screenshots4.JPG" alt="Portfolio_Screenshots4_Image_Description">
     </div>
  
 </div>
@@ -260,11 +260,7 @@ window.addEventListener("load", function() {
       loadingSpinner.style.display = "none"; // Hide the loading spinner
       mainContent.style.display = "block";
 });
-document.addEventListener("contextmenu", function(e) {
-    e.preventDefault();
- 
-            alert("Right-click is not allowed on this website.");
-});
+
 
 document.addEventListener("dragstart", function(e) {
     e.preventDefault();
