--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="main-content">
   <nav class="nav">
     <div class="logo">
-        <a href="http://ahmedwebiverse.cbu.net">
+        <a href="http://ahmedwebiverse.cbu.net/#home">
         <img src="Logo_Portfolio1.png" alt="Logo_Portfolio_Image_Description">
     </a>
     </div>
