--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 </section>
 
 <section id="portfolio" class="section"> 
-    <h4>Latest <span>Projects</span></h4>
+   <h4>Latest <span class="word-spacing">Projects</span></h4>
+
     <h5>Check out my diverse portfolio showcasing my best work in Web Development</h5>
     <div class="portfolio1">
     <div class="portfolio_img">
