--- a/thanks.html
+++ b/thanks.html
@@ -16,7 +16,7 @@
         
     </span>for Your Response!</h1>
     <p>We appreciate your feedback and will get back to you soon.</p>
-    <a href="//ahmedwebiverse.cbu.net"  class="buton3 bt1">Move back?</a>
+    <a href="https://f219295.github.io/ahmedwebiverse"  class="buton3 bt1">Move back?</a>
 </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
